Aggiunte pagine Emergenze e Impostazioni, riprogettazione pagine, cambio stile pagine e aggiunte varie funzioni riguardante l'SOS

--- a/src/index.html
+++ b/src/index.html
@@ -17,6 +17,9 @@
   <!-- add to homescreen for ios -->
   <meta name="apple-mobile-web-app-capable" content="yes" />
   <meta name="apple-mobile-web-app-status-bar-style" content="black" />
+  <script
+    src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCudTOorJR4MUdtOqbHCxWt4C4JVmkCiPg&callback=initMap&v=weekly&libraries=marker" defer>
+  </script>
 </head>
 
 <body>
